--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,10 @@
 .read-the-docs {
   color: #888;
 }
+
+.playerlists {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+}
