--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  /* display: flex; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -38,7 +37,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.2em 0.6em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
